<resources>
    <string name="app_name">PRAYAS</string>
    <string name="hello_blank_fragment">this fragment chat List</string>
    <string name="hello_blank_fragment2">this fragment available books List</string>
    <string name="hello_blank_fragment3">this fragment your book List</string>
    <string name="bookcover">ADD BOOK COVER</string>
    <string name="bookname">Enter the name of book</string>
    <string name="authorname">Enter the name of author</string>
    <string name="donate">Donate</string>
    <string name="enter_journal_message">Say the city</string>
    <string name="sell">Sell</string>
    <string name="publishdate">Select publish date</string>
    <string name="reusea">Tap to know more:The reusability scale is the measure of state of book.Rate your product on a scale of 1-10 sighting its present condition.It should be filled with honesty.A new book has a rating of 10 while a book more than 10 years old has a scale of 1</string>
    <string name="pic">Tap to know more:Please add three photos of different pages of the book.These photos will be accessible by the customers.</string>
    <string name="policy">We have access to your email,your location,your search history.This is in order to provide you a better user experience and more features.We do not share these critical informations specifically with any third party without your permissions but we use these data for a better app experience.You allow us to have access to these data.</string>
    <string name="agree">You agree to our Terms of Use and Privacy policy</string>
    <string name="nameerror">Name of book cannot be left blank</string>
    <string name="authorerror">Author of book cannot be left blank</string>
    <string name="add">ADD BOOK</string>
    <string name="agreewarn">Agree to our privacy policy to proceed</string>
    <string-array name="select">
        <item>SELECT SUBJECT</item>
    </string-array>
    <string-array name="empty">
        <item>OTHERS</item>
    </string-array>
    <string-array name="rating">
        <item>REUSABILITY RATING</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="exam_type">
        <item>SELECT EXAM</item>
        <item>JEE MAINS</item>
        <item>JEE ADVANCED</item>
        <item>GATE</item>
        <item>NEET</item>
        <item>AIIMS</item>
        <item>ICSE</item>
        <item>ISC</item>
        <item>CBSE(10)</item>
        <item>CBSE(12)</item>
        <item>CAT</item>
        <item>XAT</item>
        <item>UPSC</item>
        <item>NDA</item>
        <item>OTHERS</item>
    </string-array>
    <string-array name="jee_mains_subjects">
        <item>SELECT SUBJECT</item>
        <item>MATHS</item>
        <item>CHEMISTRY</item>
        <item>PHYSICS</item>
    </string-array>
    <string-array name="icse_subjects">
        <item>SELECT SUBJECT</item>
        <item>MATHS</item>
        <item>SCIENCE</item>
        <item>ECONOMICS</item>
        <item>SOCIAL STUDIES</item>
        <item>ENGLISH</item>
        <item>COMPUTER APPLICATIONS</item>
        <item>OTHERS</item>
    </string-array>
    <string-array name="cat_subjects">
        <item>SELECT SUBJECT</item>
        <item>QUANTITATIVE APTITUDE</item>
        <item>VERBAL ABILITY</item>
        <item>COMPREHENSION</item>
        <item>LOGICAL REASONING</item>
        <item>DATA INTERPRETATION</item>
        <item>COMPUTER APPLICATIONS</item>
        <item>OTHERS</item>
    </string-array>
    <string-array name="xat_subjects">
        <item>SELECT SUBJECT</item>
        <item>QUANTITATIVE APTITUDE</item>
        <item>VERBAL ABILITY</item>
        <item>COMPREHENSION</item>
        <item>LOGICAL REASONING</item>
        <item>DATA INTERPRETATION</item>
        <item>COMPUTER APPLICATIONS</item>
        <item>OTHERS</item>
    </string-array>
    <string-array name="cbse_10_subjects">
        <item>SELECT SUBJECT</item>
        <item>MATHS</item>
        <item>SCIENCE</item>
        <item>SOCIAL STUDIES</item>
        <item>ENGLISH</item>
        <item>COMPUTER APPLICATIONS</item>
        <item>SANSKRIT</item>
        <item>OTHERS</item>
        <item></item>
    </string-array>
    <string-array name="cbse_12_subjects">
        <item>SELECT SUBJECT</item>
        <item>MATHS</item>
        <item>PHYSICS</item>
        <item>CHEMISTRY</item>
        <item>BIO</item>
        <item>ECONOMICS</item>
        <item>HISTORY</item>
        <item>ENGLISH</item>
        <item>PHYSICAL EDUCATION</item>
        <item>INFORMATION PRACTICES</item>
        <item>COMPUTER SCIENCE</item>
        <item>FINE ARTS</item>
        <item>SANSKRIT</item>
        <item>OTHERS</item>
        <item></item>
    </string-array>
    <string-array name="upsc_subjects">
        <item>SELECT SUBJECT</item>
        <item>HISTORY</item>
        <item>GEOGRAPHY</item>
        <item>GOVERNANCE</item>
        <item>CONSTITUTION</item>
        <item>POLITY</item>
        <item>SOCIAL JUSTICE</item>
        <item>INTERNATIONAL RELATIONS</item>
        <item>TECHNOLOGY</item>
        <item>ECONOMIC DEVELOPMENT</item>
        <item>ENVIRONMENT</item>
        <item>APTITUDE</item>
        <item>DISASTER MANAGEMENT</item>
        <item>OTHERS</item>
        <item></item>
    </string-array>
    <string-array name="isc_subjects">
        <item>SELECT SUBJECT</item>
        <item>MATHS</item>
        <item>PHYSICS</item>
        <item>CHEMISTRY</item>
        <item>BIO</item>
        <item>ECONOMICS</item>
        <item>HISTORY</item>
        <item>ENGLISH</item>
        <item>PHYSICAL EDUCATION</item>
        <item>INFORMATION PRACTICES</item>
        <item>COMPUTER SCIENCE</item>
        <item>FINE ARTS</item>
        <item>SANSKRIT</item>
        <item>OTHERS</item>
        <item></item>
    </string-array>
    <string-array name="nda_subjects">
        <item>SELECT SUBJECT</item>
        <item>ALGEBRA</item>
        <item>CALCULUS</item>
        <item>TRIGONOMETRY</item>
        <item>STATISTICS</item>
    </string-array>
    <string-array name="jee_advanced_subjects">
        <item>SELECT SUBJECT</item>
        <item>MATHS</item>
        <item>CHEMISTRY</item>
        <item>PHYSICS</item>
    </string-array>
    <string-array name="neet_subjects">
        <item>SELECT SUBJECT</item>
        <item>ZOOLOGY</item>
        <item>BOTANY</item>
        <item>CHEMISTRY</item>
        <item>PHYSICS</item>
    </string-array>
    <string-array name="aiims_subjects">
        <item>SELECT SUBJECT</item>
        <item>ZOOLOGY</item>
        <item>BOTANY</item>
        <item>CHEMISTRY</item>
        <item>PHYSICS</item>
    </string-array>
    <string-array name="gate_subjects">
        <item>SELECT SUBJECT</item>
        <item>ECE</item>
        <item>CSE</item>
        <item>MECHANICAL</item>
        <item>ELECTRICAL</item>
        <item>CIVIL</item>
        <item>AEROSPACE</item>
        <item>AGRICULTURAL</item>
        <item>ARCHITECTURE AND PLANNING</item>
        <item>BIOMEDICAL</item>
        <item>BIOTECHNOLOGY</item>
        <item>CHEMICAL</item>
        <item>GEOLOGY AND PHYSICS</item>
        <item>CHEMISTRY</item>
    </string-array>
    <string-array name="andhra_pradesh_cities">
        <item>SELECT CITY</item>
        <item>Adoni</item>
        <item>Anakapalli</item>
        <item>Anantapur</item>
        <item>Bhimavaram</item>
        <item>Chilakaluripet</item>
        <item>Chittoor</item>
        <item>Dharmavaram</item>
        <item>Eluru</item>
        <item>Gudivada</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Kakinada</item>
        <item>Kavali</item>
        <item>Kurnool</item>
        <item>Machilipatnam</item>
        <item>Madanapalle</item>
        <item>Nandyal</item>
        <item>Narasaraopet</item>
        <item>Nellore</item>
        <item>Ongole</item>
        <item>Proddatur</item>
        <item>Rajamahendravaram</item>
        <item>Srikakulam</item>
        <item>Tadepalligudem</item>
        <item>Tadipatri</item>
        <item>Tenali</item>
        <item>Tirupati</item>
        <item>Vijayawada</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
    </string-array>
    <string-array name="arunachal_pradesh_cities">
        <item>SELECT CITY</item>
        <item>Tawang</item>
        <item>Aalo</item>
        <item>Anini</item>
        <item>Bomdila</item>
        <item>Basar</item>
        <item>Bhalukpong</item>
        <item>Bordumsa</item>
        <item>Changlang</item>
        <item>Chowkham</item>
        <item>Deomali</item>
        <item>Dambuk</item>
        <item>Daporijo</item>
        <item>Hawai</item>
        <item>Khonsa</item>
        <item>Lumla</item>
        <item>Itanagar</item>
        <item>Namsai</item>
        <item>Naharlagun</item>
        <item>Jairampur</item>
        <item>Pasighat</item>
        <item>Roing</item>
        <item>Nyapin</item>
        <item>Yupia</item>
        <item>Seppa</item>
        <item>Pangin</item>
        <item>Tuting</item>
        <item>Ziro</item>
        <item>Tezu</item>
    </string-array>
    <string-array name="assam_cities">
        <item>SELECT CITY</item>
        <item>Guwahati</item>
        <item>Silchar</item>
        <item>Dibrugarh</item>
        <item>Jorhat</item>
        <item>Nagaon</item>
        <item>Tinsukia</item>
        <item>Tezpur</item>
    </string-array>
    <string-array name="Bihar">
        <item>SELECT CITY</item>
        <item>Patna</item>
        <item>Gaya</item>
        <item>Bhagalpur</item>
        <item>Muzaffarpur</item>
        <item>Purnia</item>
        <item>Darbhanga</item>
        <item>Bihar Sharif</item>
        <item>Arrah</item>
        <item>Begusarai</item>
        <item>Katihar</item>
        <item>Munger</item>
        <item>Chhapra</item>
        <item>Danapur</item>
        <item>Bettiah</item>
        <item>Saharsa</item>
        <item>Sasaram</item>
        <item>Hajipur</item>
        <item>Dehri</item>
        <item>Siwan</item>
        <item>Motihari</item>
        <item>Nawada</item>
        <item>Bagaha</item>
        <item>Buxar</item>
        <item>Kishanganj</item>
        <item>Sitamarhi</item>
        <item>Jamalpur</item>
        <item>Jehanabad</item>
        <item>Aurangabad</item>

    </string-array>
    <string-array name="Chhatisgarh">
        <item>SELECT CITY</item>
        <item>Bastar</item>
        <item>Bijapur</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Bhilai-Durg</item>
        <item>Janjgir-champa</item>
        <item>Jashpur</item>
        <item>Kabeerdham</item>
        <item>Korba</item>
        <item>Koriya</item>
        <item>Mahasamund</item>
        <item>Narayanpur</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sarguja</item>
        <item>Kanker</item>
    </string-array>
    <string-array name="goa_cities">
        <item>SELECT CITY</item>
        <item>Panaji</item>
        <item>Mapusa</item>
        <item>Bicholim</item>
        <item>Ponda</item>
        <item>Mormugao</item>
        <item>Margao</item>
        <item>Quepem</item>
        <item>Dharbandora</item>
    </string-array>
    <string-array name="gujarat_cities">
        <item>SELECT CITY</item>
        <item>Ahmedabad</item>
        <item>Surat</item>
        <item>Vadodara</item>
        <item>Rajkot</item>
        <item>Bhavnagar</item>
        <item>Jamnagar</item>
        <item>Junagadh</item>
        <item>Anand</item>
        <item>Navsari</item>
        <item>Surendranagar</item>
        <item>Morvi</item>
        <item>Gandhidham</item>
        <item>Nadiad</item>
        <item>Bharuch</item>
        <item>Porbandar</item>
    </string-array>
</resources>